# MPMCQueue

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
_codeql_build_dir/: MPMCQueueConfig.cmake
_codeql_build_dir/examples/: basic_example  threaded_example
_codeql_build_dir/tests/: test_basic  test_concurrent  test_types
cmake/: MPMCQueueConfig.cmake.in
examples/: CMakeLists.txt  basic_example.cpp  threaded_example.cpp
include/: mpmc_queue.hpp
test/: test.cpp
tests/: CMakeLists.txt  test_basic.cpp  test_concurrent.cpp  test_types.cpp
